<resources>
    <string name="app_name">BaseDeDatos</string>
    <string name="txt_codigo">Codigo del producto</string>
    <string name="txt_descripcion">Descripcion del producto</string>
    <string name="txt_precio">Precio del producto</string>
    <string name="btn_Registrar">Registrar producto</string>
    <string name="btn_Buscar">Buscar producto</string>
    <string name="btn_Eliminar">Eliminar producto</string>
    <string name="btn_Modificar">Modificar producto</string>
    <string name="btn_Limpiar">Limpiar</string>
</resources>